--- a/SkillFactory/Python-2/Lists.ipynb
+++ b/SkillFactory/Python-2/Lists.ipynb
@@ -568,6 +568,249 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1,\n",
+       " 1,\n",
+       " 4,\n",
+       " 1024,\n",
+       " 9,\n",
+       " 59049,\n",
+       " 16,\n",
+       " 1048576,\n",
+       " 25,\n",
+       " 9765625,\n",
+       " 36,\n",
+       " 60466176,\n",
+       " 49,\n",
+       " 282475249,\n",
+       " 64,\n",
+       " 1073741824,\n",
+       " 81,\n",
+       " 3486784401]"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "powers = [x**y for x in range(1, 10) for y in [2,10]]\n",
+    "powers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[3,\n",
+       " 5,\n",
+       " 7,\n",
+       " 11,\n",
+       " 13,\n",
+       " 17,\n",
+       " 19,\n",
+       " 23,\n",
+       " 29,\n",
+       " 31,\n",
+       " 37,\n",
+       " 41,\n",
+       " 43,\n",
+       " 47,\n",
+       " 53,\n",
+       " 59,\n",
+       " 61,\n",
+       " 67,\n",
+       " 71,\n",
+       " 73,\n",
+       " 79,\n",
+       " 83,\n",
+       " 89,\n",
+       " 97]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "numbers = [x for x in range(3,100) if [x%y for y in range(2,x)].count(0) == 0]\n",
+    "numbers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[9.9,\n",
+       " 11,\n",
+       " 12.100000000000001,\n",
+       " 10.8,\n",
+       " 12,\n",
+       " 13.200000000000001,\n",
+       " 11.700000000000001,\n",
+       " 13,\n",
+       " 14.3,\n",
+       " 12.6,\n",
+       " 14,\n",
+       " 15.400000000000002,\n",
+       " 13.5,\n",
+       " 15,\n",
+       " 16.5,\n",
+       " 14.4,\n",
+       " 16,\n",
+       " 17.6,\n",
+       " 15.3,\n",
+       " 17,\n",
+       " 18.700000000000003,\n",
+       " 16.2,\n",
+       " 18,\n",
+       " 19.8,\n",
+       " 17.1,\n",
+       " 19,\n",
+       " 20.900000000000002]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_list = [x*y for x in range(11,20) for y in [0.9, 1, 1.1]]\n",
+    "my_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2.6457513110645907,\n",
+       " 3.7416573867739413,\n",
+       " 4.58257569495584,\n",
+       " 5.291502622129181,\n",
+       " 5.916079783099616,\n",
+       " 6.48074069840786,\n",
+       " 7.0]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_list = [x ** 0.5 for x in range(1,50) if x % 7 == 0]\n",
+    "my_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[9, 10, 11, 12, 13, 14, 15, 16, 17, 18]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_list = []\n",
+    "for x in range(90, 100):\n",
+    "    first_digit = x//10\n",
+    "    last_digit = x%10\n",
+    "    my_list.append(first_digit + last_digit)\n",
+    "my_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[9, 10, 11, 12, 13, 14, 15, 16, 17, 18]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_list = [x//10+x%10 for x in range(90, 100)]\n",
+    "my_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "95//10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['а', 'з', 'и', 'н', 'н', 'о', 'о', 'о', 'р', 'р', 'с', 'т', 'ф', 'х']"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_list = sorted([x for x in 'синхрофазотрон'])\n",
+    "my_list"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
