--- a/SkillFactory/Python-3/File to dictionary.ipynb
+++ b/SkillFactory/Python-3/File to dictionary.ipynb
@@ -294,7 +294,25 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "students = {}\n",
+    "\n",
+    "f = open('StudentsPerformance.csv')\n",
+    "i = 0\n",
+    "\n",
+    "for line in f:\n",
+    "    info = line.split(',')\n",
+    "    if info[0] == '\"gender\"':\n",
+    "        continue\n",
+    "    else:\n",
+    "        gender = info[0][1:-1]\n",
+    "        parents = info[2][1:-1]\n",
+    "        if gender == 'male' and parents == \"master's degree\":\n",
+    "            if int(info[5] > 90:\n",
+    "                i += 1\n",
+    "            \n",
+    "print(i)"
+   ]
   }
  ],
  "metadata": {
