--- a/SkillFactory/Python-3/File to list.ipynb
+++ b/SkillFactory/Python-3/File to list.ipynb
@@ -215,9 +215,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "expected an indented block (<ipython-input-1-8c649ec7c35c>, line 29)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-1-8c649ec7c35c>\"\u001b[1;36m, line \u001b[1;32m29\u001b[0m\n\u001b[1;33m    print(len(writing_above90))\u001b[0m\n\u001b[1;37m                               ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m expected an indented block\n"
+     ]
+    }
+   ],
    "source": [
     "import re\n",
     "pattern = re.compile('\\d+')\n",
@@ -249,6 +258,106 @@
     "\n",
     "print(len(writing_above90))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Средняя оценка - 65.473\n"
+     ]
+    }
+   ],
+   "source": [
+    "reading = []\n",
+    "\n",
+    "f = open('StudentsPerformance.csv')\n",
+    "\n",
+    "for line in f:\n",
+    "    info = line.split(',')\n",
+    "    if info[0] == '\"gender\"':\n",
+    "        continue\n",
+    "    else:\n",
+    "        if info[0] == '\"male\"':\n",
+    "            mark = int(info[6][1:-1])\n",
+    "            reading.append(mark) \n",
+    "\n",
+    "reading_avg = round(sum(reading)/len(reading), 3)\n",
+    "print('Средняя оценка -', reading_avg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Средняя оценка - 97.857\n"
+     ]
+    }
+   ],
+   "source": [
+    "reading = []\n",
+    "\n",
+    "f = open('StudentsPerformance.csv')\n",
+    "\n",
+    "for line in f:\n",
+    "    info = line.split(',')\n",
+    "    if info[0] == '\"gender\"':\n",
+    "        continue\n",
+    "    else:\n",
+    "        if info[5] == '\"100\"':\n",
+    "            mark = int(info[6][1:-1])\n",
+    "            reading.append(mark) \n",
+    "\n",
+    "reading_avg = round(sum(reading)/len(reading), 3)\n",
+    "print('Средняя оценка -', reading_avg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Средняя оценка - 63.02\n"
+     ]
+    }
+   ],
+   "source": [
+    "writing = []\n",
+    "\n",
+    "f = open('StudentsPerformance.csv')\n",
+    "\n",
+    "for line in f:\n",
+    "    info = line.split(',')\n",
+    "    if info[0] == '\"gender\"':\n",
+    "        continue\n",
+    "    else:\n",
+    "        if info[3] == '\"free/reduced\"':            \n",
+    "            mark = int(info[7][1:-2])\n",
+    "            writing.append(mark) \n",
+    "\n",
+    "writing_avg = round(sum(writing)/len(writing), 2)\n",
+    "print('Средняя оценка -', writing_avg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
