--- a/dst/module_1/python_5/Data grouping.ipynb
+++ b/dst/module_1/python_5/Data grouping.ipynb
@@ -2299,10 +2299,109 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2035000"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.read_csv('data_sf.csv')\n",
+    "df_grouped = df.groupby(['Club'])['Wage'].sum()\n",
+    "\n",
+    "df_grouped['Chelsea']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "54000"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.read_csv('data_sf.csv')\n",
+    "df[(df.Age==20) & (df.Nationality=='Argentina')].Wage.max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "300000"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.read_csv('data_sf.csv')\n",
+    "df[(df.Age==30) & (df.Nationality=='Argentina')].Wage.max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1000"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.read_csv('data_sf.csv')\n",
+    "df[(df.Age==30) & (df.Nationality=='Argentina')].Wage.min()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.read_csv('data_sf.csv')\n",
+    "df[(df.Club=='FC Barcelona') & (df.Nationality=='Argentina')].Strength"
+   ]
   }
  ],
  "metadata": {
