--- a/dst/module_1/python_5/Data grouping.ipynb
+++ b/dst/module_1/python_5/Data grouping.ipynb
@@ -2393,15 +2393,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 107,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "59\n",
+      "95\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "\n",
     "df = pd.read_csv('data_sf.csv')\n",
-    "df[(df.Club=='FC Barcelona') & (df.Nationality=='Argentina')].Strength"
+    "print(df[(df.Club=='FC Barcelona') & (df.Nationality=='Argentina')].Strength.max())\n",
+    "print(df[(df.Club=='FC Barcelona') & (df.Nationality=='Argentina')].Balance.max())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
