--- a/dst/module_1/python_6/Pivot_table.ipynb
+++ b/dst/module_1/python_6/Pivot_table.ipynb
@@ -1213,7 +1213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -1229,7 +1229,7 @@
        "Name: CM, dtype: int64"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1273,20 +1273,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "Position\n",
-       "RF     76.333333\n",
-       "LAM    76.333333\n",
-       "LF     75.875000\n",
+       "RM     74.943864\n",
+       "LM     74.211538\n",
+       "All    73.143460\n",
+       "RS     71.991228\n",
+       "RB     71.186709\n",
+       "CF     69.803922\n",
        "Name: All, dtype: float64"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1295,8 +1298,36 @@
     "import pandas as pd\n",
     "\n",
     "df = pd.read_csv('data_sf.csv')\n",
-    "df2 = df.pivot_table(columns = 'Position', index = 'Club', values = 'SprintSpeed', aggfunc = 'mean', fill_value=0, margins=True)\n",
-    "df2.loc['All'].sort_values(ascending=False).head(3)\n"
+    "df2 = df.loc[df['Position'].isin(['RB', 'LM', 'RM', 'CF', 'RWM', 'RS'])].pivot_table(columns = 'Position', index = 'Club', values = 'SprintSpeed', aggfunc = 'mean', fill_value=0, margins=True)\n",
+    "df2.loc['All'].sort_values(ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Club\n",
+       "Vitória      91.0\n",
+       "Sydney FC    88.0\n",
+       "CD Lugo      87.0\n",
+       "Name: ST, dtype: float64"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.read_csv('data_sf.csv')\n",
+    "df2 = df.loc[df['Club'].isin(['Sydney FC', 'CD Lugo', 'Arsenal', 'Toronto FC', 'Girona FC', 'Melbourne Victory', 'Vitória'])].pivot_table(columns = 'Position', index = 'Club', values = 'SprintSpeed', aggfunc = 'mean', fill_value=0, margins=True)\n",
+    "df2['ST'].sort_values(ascending=False).head(3)"
    ]
   },
   {
