--- a/dst/module_1/python_7/Data information.ipynb
+++ b/dst/module_1/python_7/Data information.ipynb
@@ -854,6 +854,291 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>item_id</th>\n",
+       "      <th>vendor</th>\n",
+       "      <th>stock_count</th>\n",
+       "      <th>purchase_id</th>\n",
+       "      <th>price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>417283</td>\n",
+       "      <td>Samsung</td>\n",
+       "      <td>54.0</td>\n",
+       "      <td>101.0</td>\n",
+       "      <td>13900.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>849734</td>\n",
+       "      <td>LG</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>101.0</td>\n",
+       "      <td>5330.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>132223</td>\n",
+       "      <td>Apple</td>\n",
+       "      <td>122.0</td>\n",
+       "      <td>101.0</td>\n",
+       "      <td>38200.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>573943</td>\n",
+       "      <td>Apple</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>112.0</td>\n",
+       "      <td>49990.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>19475</td>\n",
+       "      <td>LG</td>\n",
+       "      <td>102.0</td>\n",
+       "      <td>121.0</td>\n",
+       "      <td>9890.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>3294095</td>\n",
+       "      <td>Apple</td>\n",
+       "      <td>43.0</td>\n",
+       "      <td>145.0</td>\n",
+       "      <td>33000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>382043</td>\n",
+       "      <td>Samsung</td>\n",
+       "      <td>77.0</td>\n",
+       "      <td>145.0</td>\n",
+       "      <td>67500.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>302948</td>\n",
+       "      <td>Samsung</td>\n",
+       "      <td>143.0</td>\n",
+       "      <td>145.0</td>\n",
+       "      <td>34500.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>100132</td>\n",
+       "      <td>LG</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>221.0</td>\n",
+       "      <td>11400.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>312394</td>\n",
+       "      <td>ZTE</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>103845</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>145.0</td>\n",
+       "      <td>89900.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    item_id   vendor  stock_count  purchase_id    price\n",
+       "0    417283  Samsung         54.0        101.0  13900.0\n",
+       "1    849734       LG         33.0        101.0   5330.0\n",
+       "2    132223    Apple        122.0        101.0  38200.0\n",
+       "3    573943    Apple         18.0        112.0  49990.0\n",
+       "4     19475       LG        102.0        121.0   9890.0\n",
+       "5   3294095    Apple         43.0        145.0  33000.0\n",
+       "6    382043  Samsung         77.0        145.0  67500.0\n",
+       "7    302948  Samsung        143.0        145.0  34500.0\n",
+       "8    100132       LG         60.0        221.0  11400.0\n",
+       "9    312394      ZTE         19.0          NaN      NaN\n",
+       "10   103845      NaN          NaN        145.0  89900.0"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "items_dict = {\n",
+    "    'item_id': [417283, 849734, 132223, 573943, 19475, 3294095, 382043, 302948, 100132, 312394],\n",
+    "    'vendor': ['Samsung', 'LG', 'Apple', 'Apple', 'LG', 'Apple', 'Samsung', 'Samsung', 'LG', 'ZTE'],\n",
+    "    'stock_count': [54, 33, 122, 18, 102, 43, 77, 143, 60, 19]\n",
+    "}\n",
+    "purchase_log = {\n",
+    "    'purchase_id': [101, 101, 101, 112, 121, 145, 145, 145, 145, 221],\n",
+    "    'item_id': [417283, 849734, 132223, 573943, 19475, 3294095, 382043, 302948, 103845, 100132],\n",
+    "    'price': [13900, 5330, 38200, 49990, 9890, 33000, 67500, 34500, 89900, 11400]\n",
+    "}\n",
+    "\n",
+    "items_df = pd.DataFrame(items_dict)\n",
+    "purchase_df = pd.DataFrame(purchase_log)\n",
+    "\n",
+    "items_df.merge(purchase_df, how = 'outer', on = 'item_id')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "item_id        9\n",
+       "vendor         9\n",
+       "stock_count    9\n",
+       "purchase_id    9\n",
+       "price          9\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "items_dict = {\n",
+    "    'item_id': [417283, 849734, 132223, 573943, 19475, 3294095, 382043, 302948, 100132, 312394],\n",
+    "    'vendor': ['Samsung', 'LG', 'Apple', 'Apple', 'LG', 'Apple', 'Samsung', 'Samsung', 'LG', 'ZTE'],\n",
+    "    'stock_count': [54, 33, 122, 18, 102, 43, 77, 143, 60, 19]\n",
+    "}\n",
+    "purchase_log = {\n",
+    "    'purchase_id': [101, 101, 101, 112, 121, 145, 145, 145, 145, 221],\n",
+    "    'item_id': [417283, 849734, 132223, 573943, 19475, 3294095, 382043, 302948, 103845, 100132],\n",
+    "    'price': [13900, 5330, 38200, 49990, 9890, 33000, 67500, 34500, 89900, 11400]\n",
+    "}\n",
+    "\n",
+    "items_df = pd.DataFrame(items_dict)\n",
+    "purchase_df = pd.DataFrame(purchase_log)\n",
+    "\n",
+    "merged = items_df.merge(purchase_df, how = 'inner', on = 'item_id')\n",
+    "merged.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6    382043\n",
+       "Name: item_id, dtype: int64"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "items_dict = {\n",
+    "    'item_id': [417283, 849734, 132223, 573943, 19475, 3294095, 382043, 302948, 100132, 312394],\n",
+    "    'vendor': ['Samsung', 'LG', 'Apple', 'Apple', 'LG', 'Apple', 'Samsung', 'Samsung', 'LG', 'ZTE'],\n",
+    "    'stock_count': [54, 33, 122, 18, 102, 43, 77, 143, 60, 19]\n",
+    "}\n",
+    "purchase_log = {\n",
+    "    'purchase_id': [101, 101, 101, 112, 121, 145, 145, 145, 145, 221],\n",
+    "    'item_id': [417283, 849734, 132223, 573943, 19475, 3294095, 382043, 302948, 103845, 100132],\n",
+    "    'price': [13900, 5330, 38200, 49990, 9890, 33000, 67500, 34500, 89900, 11400]\n",
+    "}\n",
+    "\n",
+    "items_df = pd.DataFrame(items_dict)\n",
+    "purchase_df = pd.DataFrame(purchase_log)\n",
+    "\n",
+    "merged = items_df.merge(purchase_df, how = 'inner', on = 'item_id')\n",
+    "merged['revenue'] = merged['price'] * (merged['stock_count'])\n",
+    "merged.loc[merged.revenue == merged.revenue.max()].item_id"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "19729490"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "items_dict = {\n",
+    "    'item_id': [417283, 849734, 132223, 573943, 19475, 3294095, 382043, 302948, 100132, 312394],\n",
+    "    'vendor': ['Samsung', 'LG', 'Apple', 'Apple', 'LG', 'Apple', 'Samsung', 'Samsung', 'LG', 'ZTE'],\n",
+    "    'stock_count': [54, 33, 122, 18, 102, 43, 77, 143, 60, 19]\n",
+    "}\n",
+    "purchase_log = {\n",
+    "    'purchase_id': [101, 101, 101, 112, 121, 145, 145, 145, 145, 221],\n",
+    "    'item_id': [417283, 849734, 132223, 573943, 19475, 3294095, 382043, 302948, 103845, 100132],\n",
+    "    'price': [13900, 5330, 38200, 49990, 9890, 33000, 67500, 34500, 89900, 11400]\n",
+    "}\n",
+    "\n",
+    "items_df = pd.DataFrame(items_dict)\n",
+    "purchase_df = pd.DataFrame(purchase_log)\n",
+    "\n",
+    "merged = items_df.merge(purchase_df, how = 'inner', on = 'item_id')\n",
+    "df = pd.DataFrame()\n",
+    "merged['revenue'] = merged['price'] * (merged['stock_count'])\n",
+    "display(merged['revenue'].sum())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
