--- a/dst/module_0/python_3/Strings.ipynb
+++ b/dst/module_0/python_3/Strings.ipynb
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +320,7 @@
    ],
    "source": [
     "email = 'VeryBigBoss@skillfactory.ru'\n",
-    "email[email.find('@')+1:]\n",
+    "domain = email[email.find('@')+1:]\n",
     "\n",
     "print(domain)"
    ]
