--- a/dst/module_1/project_1/[SF-DST] Movies IMBD v3.0.ipynb
+++ b/dst/module_1/project_1/[SF-DST] Movies IMBD v3.0.ipynb
@@ -584,12 +584,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 144,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "600    The Dark Knight\n",
+       "Name: original_title, dtype: object"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "\n",
-    "answer_ls.append(1)"
+    "data_2008 = data.loc[data.release_year == 2008]\n",
+    "display(data_2008.loc[data_2008.net_income == data_2008.net_income.max()].original_title)\n",
+    "answer_ls.append(4)"
    ]
   },
   {
@@ -607,11 +619,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 146,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1246    The Lone Ranger\n",
+       "Name: original_title, dtype: object"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "answer_ls.append(1)"
+    "data_1214 = data.loc[(data.release_year >= 2012) & (data.release_year <= 2014)]\n",
+    "display(data_1214.loc[data_1214.net_income == data_1214.net_income.min()].original_title)\n",
+    "answer_ls.append(5)"
    ]
   },
   {
