--- a/dst/module_1/project_1/[SF-DST] Movies IMBD v3.0.ipynb
+++ b/dst/module_1/project_1/[SF-DST] Movies IMBD v3.0.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 2,
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5"
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +221,7 @@
        "4           7.3          2015  "
       ]
      },
-     "execution_count": 59,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +242,7 @@
        "1890"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -584,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -608,8 +608,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 10. Самый убыточный фильм за период с 2012 по 2014 (включительно)?\n",
+    " 10. Самый убыточный фильм за период с 2012 по 2014 (включительно)?\n",
+    "\n",
     "Варианты ответов:\n",
+    "\n",
     "1. Winter's Tale\ttt1837709\n",
     "2. Stolen\ttt1656186\n",
     "3. Broken City\ttt1235522\n",
@@ -619,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -643,7 +645,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 11. Какого жанра фильмов больше всего?\n",
+    "11. Какого жанра фильмов больше всего?\n",
     "Варианты ответов:\n",
     "1. Action\n",
     "2. Adventure\n",
@@ -654,11 +656,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 16,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Action': 583, 'Adventure': 416, 'Drama': 782, 'Comedy': 683, 'Thriller': 597}\n"
+     ]
+    }
+   ],
    "source": [
-    "answer_ls.append(1)"
+    "Action = data[data.genres.str.contains(\"Action\", na=False)].original_title.count()\n",
+    "Adventure = data[data.genres.str.contains(\"Adventure\", na=False)].original_title.count()\n",
+    "Drama = data[data.genres.str.contains(\"Drama\", na=False)].original_title.count()\n",
+    "Comedy = data[data.genres.str.contains(\"Comedy\", na=False)].original_title.count()\n",
+    "Thriller = data[data.genres.str.contains(\"Thriller\", na=False)].original_title.count()\n",
+    "genres = {\n",
+    "    'Action': Action,\n",
+    "    'Adventure': Adventure,\n",
+    "    'Drama': Drama,\n",
+    "    'Comedy': Comedy,\n",
+    "    'Thriller': Thriller,\n",
+    "}\n",
+    "print(genres)\n",
+    "answer_ls.append(3)"
    ]
   },
   {
@@ -676,10 +701,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Action': 444, 'Adventure': 337, 'Drama': 560, 'Comedy': 551, 'Thriller': 446}\n"
+     ]
+    }
+   ],
    "source": [
+    "p_data = data.loc[data.net_income > 0]\n",
+    "Action = p_data[p_data.genres.str.contains(\"Action\", na=False)].original_title.count()\n",
+    "Adventure = p_data[p_data.genres.str.contains(\"Adventure\", na=False)].original_title.count()\n",
+    "Drama = p_data[p_data.genres.str.contains(\"Drama\", na=False)].original_title.count()\n",
+    "Comedy = p_data[p_data.genres.str.contains(\"Comedy\", na=False)].original_title.count()\n",
+    "Thriller = p_data[p_data.genres.str.contains(\"Thriller\", na=False)].original_title.count()\n",
+    "genres = {\n",
+    "    'Action': Action,\n",
+    "    'Adventure': Adventure,\n",
+    "    'Drama': Drama,\n",
+    "    'Comedy': Comedy,\n",
+    "    'Thriller': Thriller,\n",
+    "}\n",
+    "print(genres)\n",
     "answer_ls.append(1)"
    ]
   },
@@ -698,11 +745,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Steven Soderbergh              13\n",
+       "Clint Eastwood                 12\n",
+       "Ridley Scott                   12\n",
+       "Shawn Levy                     10\n",
+       "Steven Spielberg               10\n",
+       "                               ..\n",
+       "Chris Miller|Raman Hui          1\n",
+       "James Gray                      1\n",
+       "Paul Weiland                    1\n",
+       "Chris Williams|Byron Howard     1\n",
+       "Fyodor Bondarchuk               1\n",
+       "Name: director, Length: 958, dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "answer_ls.append(1)"
+    "display(data['director'].value_counts())\n",
+    "answer_ls.append(3)"
    ]
   },
   {
@@ -720,11 +789,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ridley Scott         12\n",
+       "Clint Eastwood       10\n",
+       "Steven Soderbergh    10\n",
+       "Steven Spielberg     10\n",
+       "Shawn Levy            9\n",
+       "                     ..\n",
+       "Kimberly Peirce       1\n",
+       "Pat O'Connor          1\n",
+       "Scott Hicks           1\n",
+       "Henry Selick          1\n",
+       "David McNally         1\n",
+       "Name: director, Length: 774, dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "answer_ls.append(1)"
+    "display(p_data['director'].value_counts())\n",
+    "answer_ls.append(4)"
    ]
   },
   {
@@ -742,12 +833,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>revenue</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>director</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Peter Jackson</th>\n",
+       "      <td>6490593685</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Christopher Nolan</th>\n",
+       "      <td>4167548502</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>David Yates</th>\n",
+       "      <td>4154295625</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Michael Bay</th>\n",
+       "      <td>3886938960</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>J.J. Abrams</th>\n",
+       "      <td>3579169916</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      revenue\n",
+       "director                     \n",
+       "Peter Jackson      6490593685\n",
+       "Christopher Nolan  4167548502\n",
+       "David Yates        4154295625\n",
+       "Michael Bay        3886938960\n",
+       "J.J. Abrams        3579169916"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "\n",
-    "answer_ls.append(1)"
+    "#data.groupby(['director'])[['net_income']].sum().sort_values(['net_income'],ascending=False).head(5)\n",
+    "display(data.groupby(['director'])[['revenue']].sum().sort_values(['revenue'],ascending=False).head(5))\n",
+    "answer_ls.append(5)"
    ]
   },
   {
@@ -765,10 +924,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 64,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Emma Watson\n"
+     ]
+    }
+   ],
    "source": [
+    "import operator\n",
+    "\n",
+    "actors_raw = data['cast']\n",
+    "actors = []\n",
+    "for line in actors_raw:\n",
+    "    actors_in_line = line.split('|')\n",
+    "    for actor in actors_in_line:\n",
+    "        if actor not in actors:        \n",
+    "            actors.append(actor)\n",
+    "\n",
+    "actors_income = {}     \n",
+    "\n",
+    "for actor in actors:\n",
+    "    data_actor = data[data.cast.str.contains(actor, na=False)]\n",
+    "    actor_income = data_actor['revenue'].sum()\n",
+    "    actors_income[actor] = actor_income\n",
+    "\n",
+    "print(max(actors_income.items(), key=operator.itemgetter(1))[0])\n",
     "answer_ls.append(1)"
    ]
   },
@@ -787,10 +972,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 63,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nicolas Cage\n"
+     ]
+    }
+   ],
    "source": [
+    "data_raw = data[data.release_year == 2012]\n",
+    "\n",
+    "actors_raw = data_raw['cast']\n",
+    "actors = []\n",
+    "for line in actors_raw:\n",
+    "    actors_in_line = line.split('|')\n",
+    "    for actor in actors_in_line:\n",
+    "        if actor not in actors:        \n",
+    "            actors.append(actor)\n",
+    "\n",
+    "actors_income = {}\n",
+    "\n",
+    "for actor in actors:    \n",
+    "    data_actor = data_raw[data_raw.cast.str.contains(actor, na=False)]\n",
+    "    actor_income = data_actor['revenue'].sum()\n",
+    "    actors_income[actor] = actor_income\n",
+    "\n",
+    "print(min(actors_income.items(), key=operator.itemgetter(1))[0])\n",
     "answer_ls.append(1)"
    ]
   },
@@ -809,11 +1020,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 62,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matt Damon\n"
+     ]
+    }
+   ],
    "source": [
-    "answer_ls.append(1)"
+    "data_raw = data[data.budget > data.budget.mean()]\n",
+    "actors_raw = data_raw['cast']\n",
+    "actors = []\n",
+    "for line in actors_raw:\n",
+    "    actors_in_line = line.split('|')\n",
+    "    for actor in actors_in_line:\n",
+    "        if actor not in actors:        \n",
+    "            actors.append(actor)\n",
+    "            \n",
+    "actors_films = {}\n",
+    "\n",
+    "for actor in actors:    \n",
+    "    films_number = data_raw[data_raw.cast.str.contains(actor, na=False)].original_title.count()\n",
+    "    actors_films[actor] = films_number\n",
+    "            \n",
+    "print(max(actors_films.items(), key=operator.itemgetter(1))[0])\n",
+    "answer_ls.append(3)"
    ]
   },
   {
@@ -831,11 +1066,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 65,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Action\n"
+     ]
+    }
+   ],
    "source": [
-    "answer_ls.append(1)"
+    "data_raw = data[(data.cast.str.contains('Nicolas Cage', na=False))]\n",
+    "genres_raw = data_raw['genres']\n",
+    "genres = []\n",
+    "for line in genres_raw:\n",
+    "    genres_in_line = line.split('|')\n",
+    "    for genre in genres_in_line:\n",
+    "        if genre not in genres:        \n",
+    "            genres.append(genre)\n",
+    "            \n",
+    "genre_films = {}\n",
+    "\n",
+    "for genre in genres:    \n",
+    "    films_number = data_raw[data_raw.genres.str.contains(genre, na=False)].original_title.count()\n",
+    "    genre_films[genre] = films_number\n",
+    "    \n",
+    "print(max(genre_films.items(), key=operator.itemgetter(1))[0])\n",
+    "answer_ls.append(2)"
    ]
   },
   {
@@ -853,11 +1112,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 74,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "185"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "answer_ls.append(1)"
+    "companies_raw = data['production_companies']\n",
+    "companies = []\n",
+    "for line in companies_raw:\n",
+    "    companies_in_line = line.split('|')\n",
+    "    for company in companies_in_line:\n",
+    "        if company not in companies:        \n",
+    "            companies.append(company)\n",
+    "\n",
+    "companies_films = {}\n",
+    "\n",
+    "for company in companies:\n",
+    "    films_number = data[data.production_companies.str.contains(company, na=False)].original_title.count()\n",
+    "    companies_films[company] = films_number\n",
+    "\n",
+    "companies_films['Universal']\n",
+    "#print(max(companies_films.items(), key=operator.itemgetter(1))[0])\n",
+    "#answer_ls.append(1)"
    ]
   },
   {
